Update for distribution, including language pack and configuration

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -6,17 +6,19 @@ talismane {
   }
   
   core {
-    parser {
-      output {
-        # processors = [
-          # com.joliciel.talismane.sr.Deprojectifier
-        #]
-      }
-      
-      evaluate {
-        # observers = [
-          # com.joliciel.talismane.sr.NonProjectiveEvaluator
-        # ]
+    generic {
+      parser {
+        output {
+          # processors = [
+            # com.joliciel.talismane.sr.Deprojectifier
+          #]
+        }
+        
+        evaluate {
+          # observers = [
+            # com.joliciel.talismane.sr.NonProjectiveEvaluator
+          # ]
+        }
       }
     }
   }
