--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,19 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.6</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<addClasspath>true</addClasspath>
+							<mainClass>com.joliciel.talismane.sr.TalismaneSerbian</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 	<dependencies>
@@ -29,18 +42,23 @@
 		</dependency>
 		<dependency>
 			<groupId>com.joliciel.talismane</groupId>
+			<artifactId>talismane-extensions</artifactId>
+			<version>5.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.joliciel.talismane</groupId>
 			<artifactId>talismane-core</artifactId>
-			<version>4.0.4-SNAPSHOT</version>
+			<version>5.1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.joliciel.talismane</groupId>
 			<artifactId>talismane-utils</artifactId>
-			<version>4.0.4-SNAPSHOT</version>
+			<version>5.1.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.joliciel.talismane</groupId>
 			<artifactId>talismane-machine-learning</artifactId>
-			<version>4.0.4-SNAPSHOT</version>
+			<version>5.1.0</version>
 		</dependency>
 	</dependencies>
 </project>
